@@ -587,6 +587,19 @@ test ttk-14.3 "-textvariable in nonexistant namespace" -body {
   -match glob -cleanup { destroy .tw }
 
 
+test ttk-15.1 "style element create: insufficient args" -body {
+     ttk::style element create
+} -returnCodes 1 -match glob -result "wrong # args:*"
+test ttk-15.2 "style element create: insufficient args" -body {
+     ttk::style element create plain.background
+} -returnCodes 1 -match glob -result "wrong # args:*"
+test ttk-15.3 "style element create: insufficient args" -body {
+     ttk::style element create plain.background from
+} -returnCodes 1 -match glob -result "wrong # args:*"
+test ttk-15.4 "style element create: valid" -body {
+     ttk::style element create plain.background from default
+} -returnCodes 0 -result ""
+
 eval destroy [winfo children .]
 
 tcltest::cleanupTests
